--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body {
 background: linear-gradient(90deg, rgba(102, 204, 51, 0.369683) 31.96%,
 rgba(217, 217, 217, 0) 50.38%,
  rgba(0, 204, 255, 0.63) 86.19%);
- 
+
 }
 
 /***css des boutons***/
 
 .boutNorm {
   text-decoration: none;
-  font-family: "Happy Monkey";
+  font-family: "Happy Monkey", sans-serif;
   background-color: #00CCFF;
   border: none ;
   color: white;
@@ -79,8 +79,8 @@ top:30%;
 #lien2{
   position:relative;
   color: white;
-  font-family: "Happy Monkey";
-  top:35%;
+  font-family: "Happy Monkey", sans-serif;
+  top:40%;
   right: 1%;
   left: 5%;
 }
@@ -103,11 +103,47 @@ top:30%;
   left:30%;
 }
 
+/***css de "Um Professional de Saude sempre ha mao e mais perto de si"**/
 
+#p1{
+  position: absolute;
+  width: 60%;
+  height: 60%;
+  left: 5%;
+  top: 45%;
+
+  font-family: 'Happy Monkey', sans-serif;
+
+  font-weight: 60%;
+  font-size: 150%;
+  line-height: 60%;
+  text-transform: capitalize;
+
+  color: #66CC33;
+}
+/***css de “Cuide de sua saude e de quem ama,em dois cliques”***/
+
+#p2{
+  position: absolute;
+  width: 60%;
+  height: 60%;
+  left: 20%;
+  top: 65%;
+
+  font-family: 'Happy Monkey',sans-serif;
+  font-style: normal;
+  font-weight:60%;
+  font-size: 150%;
+  line-height: 60%;
+  text-align: center;
+
+  color: #FFFFFF;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.8);
+
+}
 
 /**css partie 2 de la page acceuil image + barre de recherche**/
-
-
 
 #rectangle6{
 
@@ -115,6 +151,102 @@ position: absolute;
 width: 70%;
 height: 80%;
 left: 15%;
-top: 65%;
- opacity: 80%;
+top: 64%;
+ opacity: 0.5;
 }
+
+
+/***barre de recherche***/
+#barRecherche{
+  position: absolute;
+  width: 100%;
+  height: 10%;
+  left: 0%;
+  top: 99%;
+
+  background: #00CCFF;
+
+}
+
+
+#recherche{
+  position: absolute;
+  width: 9%;
+  height: 180%;
+  left: 87%;
+  top: -45%;
+}
+
+#formAceuil{
+
+}
+
+#recherche1{
+
+  margin-left:5%;
+  margin-bottom: : 5%;
+  height: 30%;
+  border: none;
+  width: 20%;
+  height: 70%;
+}
+
+
+#loc{
+    margin-left:5%;
+    border: none;
+}
+
+#dropdown1{
+  margin-left:5%;
+  border: none;
+}
+
+#filtre1{
+  text-decoration: none;
+  font-family: "Happy Monkey", sans-serif;
+  background-color: white;
+  border: white;
+  color: black;
+  text-align: center;
+  font-size: 110%;
+  left: 110%;
+  padding:0.5%;
+  margin: 1%;
+  margin-left:5%;
+  margin-bottom: : 5%;
+  transition-duration: 0.6s;
+}
+
+#filtre1:hover {
+    background-color: #daffff;
+    color:#00CCFF;
+}
+
+
+/***css sous la barre de recherche***/
+
+#image6{
+position: absolute;;
+opacity: 0.5;
+left:60%;
+   top:130%;
+   width: 40%;
+}
+
+
+
+
+
+/**css footer
+footer{
+box-sizing: border-box;
+position: absolute;
+width: 100%;
+height: 10%;
+background: #66CC33;
+border: 1px solid #000000;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+top:160%;
+}
+**/
