--- a/style.css
+++ b/style.css
@@ -23,6 +23,31 @@ rgba(217, 217, 217, 0) 50.38%,
     color:#00CCFF;
 }
 
+.boutOption{
+  text-decoration: none;
+  font-family: "Happy Monkey", sans-serif;
+  background-color: #66CC33;
+  border: 5px ;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  transition-duration: 0.6s;
+  padding:4%;
+}
+
+.boutOption:hover {
+    background-color: #daffff;
+    color:#66CC33;
+}
+
+.lien4{
+  color:white;
+}
+
+.lien4:hover{
+  color:#66CC33
+}
+
 a {
 
     text-decoration: none;
@@ -272,8 +297,11 @@ font-size: 150%;
 
 #p4{
   position: absolute;
-  top: 120%;
-  padding: 40%;
+  top: 7%;
+ font-size: 200%;
+  left:1%;
+
+  width: 90%;
 }
 
 #image22{
@@ -313,8 +341,8 @@ left:20%;
 
 #ba3{
   position: relative;
-top:30%;
-left: -30%;
+top:20%;
+left: 20%;
 
 }
 /*rectangle 2*/
@@ -348,7 +376,7 @@ left: -30%;
 
 #ba4{
   position: relative;
-top:70%;
+top:15%;
 left: 30%;
 }
 
@@ -381,10 +409,10 @@ left: 30%;
 }
 
 #ba5{
-
+color:white;
 position: relative;
-top:25%;
-left: -27%;
+top:20%;
+left: 31%;
 }
 
 /**css image entre carroussel**/
@@ -403,6 +431,8 @@ left:40%
   top:300%;
   left:-10%
 }
+
+
 /**css footer
 footer{
 box-sizing: border-box;
