--- a/style.css
+++ b/style.css
@@ -420,17 +420,99 @@ left: 31%;
 #imageBD{
 position: absolute;
 width: 60%;
-top:300%;
+top:370%;
 left:40%
 }
 
 #imageBG{
 
   position: absolute;
-  width: 60%;
-  top:300%;
-  left:-10%
+  width: 40%;
+  top:380%;
+  left:0%;
 }
+
+
+/***css carroussel1***/
+
+.imgcarroussel{
+  width: 30%;
+  position: relative;
+
+}
+.carousel{
+  width:30%;
+  position: absolute;
+  top:320%;
+  display: flex;
+  transition: transform 0.3s ease-in-out;
+  animation: carousel-animation 15s infinite linear;
+}
+
+.carousel-slide {
+  flex: 0 0 100%;
+}
+
+.carousel-slide img {
+  width: 100%;
+  height: auto;
+}
+
+@keyframes carousel-animation {
+  0% {
+    transform: translateX(0);
+  }
+  33.33% {
+    transform: translateX(-100%);
+  }
+  66.66% {
+    transform: translateX(-170%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+/***css carrousel2***/
+
+
+
+.carousel2{
+  width:30%;
+  position: absolute;
+  top:460%;
+  display: flex;
+  transition: transform 0.3s ease-in-out;
+  animation: carousel-animation 15s infinite linear;
+}
+
+.carousel-slide2 {
+  flex: 0 0 100%;
+}
+
+.carousel-slide2 img {
+  width: 100%;
+  height: auto;
+}
+
+@keyframes carousel2-animation {
+  0% {
+    transform: translateX(0);
+  }
+  33.33% {
+    transform: translateX(-100%);
+  }
+  66.66% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+
+
+
+
 
 /*** css page inscription/connexion***/
 
@@ -439,15 +521,36 @@ left:40%
 
 
 
-/**css footer
-footer{
-box-sizing: border-box;
-position: absolute;
-width: 100%;
-height: 10%;
-background: #66CC33;
-border: 1px solid #000000;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-top:160%;
+/**css footer**/
+ footer{
+     position:absolute;
+    bottom: 0;
+      width: 100%;
+     color:white;
+     font-size:180%;
+     text-align: center;
+    box-sizing: border-box;
+
+    height: 10%;
+    background: #66CC33;
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    top:550%;
+    }
+
+#liensAvisLegal{
+  color:white;
+  padding:10%;
+  top:10%;
 }
-**/
+#lienContact{
+  color:white;
+  padding:10%;
+  top:10%;
+}
+
+#lienReseaux{
+  color:white;
+  padding:10%;
+  top:10%;
+}
