--- a/style.css
+++ b/style.css
@@ -74,8 +74,9 @@ a {
   margin: 2%;
   padding: 1% 2%;
   font-size: 80%;
-  left: 60%;
-  top:2%;
+  left: 68%;
+  top:-2%;
+  border-radius: 8%;
 }
 
 
@@ -99,14 +100,15 @@ top:0%;
   right: 1%;
   left: 85%;
   text-align: center;
+  font-weight: bold;
 }
 
 #image1{
   position: absolute;
   width:20%;
   height: 20%;
-  top:0%;
-  left:-4%;
+  top:-2%;
+  left:-3%;
 }
 
 /***css de "Um Professional de Saude sempre ha mao e mais perto de si"**/
@@ -123,7 +125,7 @@ top:0%;
   font-weight: 60%;
   font-size: 230%;
   line-height: 60%;
-  text-transform: capitalize;
+
 
   color: #00CCFF;
 }
@@ -154,10 +156,11 @@ top:0%;
 #rectangle6{
 
 position:absolute;
-width:100%;
-height: 100%;
-left: 0%;
+width:110%;
+height: 110%;
+left: -6%;
 top: -10%;
+opacity: 0.3;
 
 }
 
@@ -233,7 +236,7 @@ top: -10%;
 /***css sous la barre de recherche***/
 
 #image6{
-position: absolute;;
+position: absolute;
 opacity: 0.5;
 left:60%;
 top:130%;
