--- a/style.css
+++ b/style.css
@@ -105,10 +105,10 @@ top:0%;
 
 #image1{
   position: absolute;
-  width:20%;
-  height: 20%;
-  top:-2%;
-  left:-3%;
+  width:15%;
+  height: 15%;
+margin-top: -4%;
+margin-left: -4%;
 }
 
 /***css de "Um Professional de Saude sempre ha mao e mais perto de si"**/
@@ -183,31 +183,32 @@ opacity: 0.3;
   width: 9%;
   height: 180%;
   left: 87%;
-  top: -45%;
+  top: -60%;
+  margin:1%;
 }
 
-#formAceuil{
-
-}
 
 #recherche1{
 
-  margin-left:5%;
+  margin-left:20%;
   margin-bottom: : 5%;
+  margin-top: 2%;
   height: 30%;
   border: none;
   width: 20%;
-  height: 70%;
+
 }
 
 
 #loc{
-    margin-left:5%;
+    margin:1%;
+    /* margin-left:5%; */
     border: none;
 }
 
 #dropdown1{
-  margin-left:5%;
+  margin: 1%;
+  /* margin-left:5%; */
   border: none;
 }
 
@@ -219,11 +220,12 @@ opacity: 0.3;
   color: black;
   text-align: center;
   font-size: 110%;
-  left: 110%;
-  padding:0.5%;
-  margin: 1%;
+  /* left: 110%; */
+
+  /* margin: 1%;
   margin-left:5%;
-  margin-bottom: : 5%;
+  margin-bottom: : 5%; */
+  margin-top:1%;
   transition-duration: 0.6s;
 }
 
@@ -252,9 +254,9 @@ left: -30%;
 top: 130%;
 border-radius: 60%;
 background: #66CC33;
-text-align: center;
-font-size: 150%;
-color:white;
+
+
+
 padding-left: 5%;
 }
 
@@ -279,13 +281,24 @@ color: white;
 font-size: 150%;
 }
 
+#p3{
+    position: absolute;
+    font-family: "Happy Monkey", sans-serif;
+    font-size: 200%;
+    left:15%;
+    top:10%;
+    color:white;
+    text-align: center;
+      width: 90%;
+}
 #p4{
-  position: absolute;
-  top: 7%;
- font-size: 200%;
-  left:1%;
+      font-family: "Happy Monkey", sans-serif;
+    position: absolute;
+    top: 20%;
+   font-size: 150%;
+    left:20%;
 
-  width: 90%;
+
 }
 
 #image22{
@@ -324,9 +337,14 @@ left:20%;
 }
 
 #ba3{
-  position: relative;
-top:20%;
-left: 20%;
+
+    position: relative;
+    top:20%;
+    left: 20%;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 45px;
+
 
 }
 /*rectangle 2*/
@@ -362,6 +380,9 @@ left: 20%;
   position: relative;
 top:15%;
 left: 30%;
+box-sizing: border-box;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 45px;
 }
 
 
@@ -397,6 +418,9 @@ color:white;
 position: relative;
 top:20%;
 left: 31%;
+box-sizing: border-box;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 45px;
 }
 
 /**css image entre carroussel**/
@@ -645,7 +669,7 @@ margin-top: 40%;
 position: absolute;
 font-size: 210%;
 top:15%;
-left: 10%;
+left: 15%;
 }
 
 #registroDroit{
@@ -666,7 +690,10 @@ font-size: 210%;
   margin-left:45%;
 }
 
-
+.formContainerPersonne{
+  position: absolute;
+     margin-bottom: 10px;
+   }
 /**css footer**/
  footer{
      position:absolute;
@@ -676,7 +703,7 @@ font-size: 210%;
      font-size:180%;
      text-align: center;
     box-sizing: border-box;
-
+    padding-top: 1%;
     height: 10%;
     background: #66CC33;
     border: 1px solid #000000;
