--- a/style.css
+++ b/style.css
@@ -756,6 +756,75 @@ font-size: 210%;
   margin-left:70%;
 
 }
+
+/***css gestion_rdv***/
+
+.bodyPersonne{
+  background: none;
+}
+
+.headerPersonne{
+  border: none;
+  height: 10%;
+  background: rgba(102, 204, 51, 0.42);
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* .container{
+
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /*gap: 10px; /* Ajoutez un espace entre les colonnes si nécessaire */
+}
+ .colonne{
+  flex:1;
+}
+#colonne1{
+position: absolute;
+width:30%;
+display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+box-sizing: border-box;
+background: rgba(102, 204, 51, 0.13);
+border: 1px solid #000000;
+}
+
+#colonne2{
+  position: absolute;
+  width:40%;
+  left:30.5%;
+  display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  box-sizing: border-box;
+  background: rgba(0, 204, 255, 0.26);
+  border: 1px solid #000000;
+}
+
+#colonne3{
+  position: absolute;
+width:60%;
+left:100%;
+background: linear-gradient(90deg, rgba(102, 204, 51, 0.369683) 31.96%, rgba(217, 217, 217, 0) 50.38%, rgba(0, 204, 255, 0.63) 86.19%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**css footer**/
 
 #inscriptionConnexion{
