--- a/style.css
+++ b/style.css
@@ -764,8 +764,11 @@ font-size: 210%;
 }
 
 .headerPersonne{
+  position: absolute;
   border: none;
-  height: 10%;
+  padding:3%;
+  height: 5%;
+  width: 99%;
   background: rgba(102, 204, 51, 0.42);
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -783,6 +786,7 @@ font-size: 210%;
 #colonne1{
 position: absolute;
 width:30%;
+top:20%;
 display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -792,6 +796,7 @@ border: 1px solid #000000;
 }
 
 #colonne2{
+  top:20%;
   position: absolute;
   width:40%;
   left:30.5%;
@@ -805,14 +810,20 @@ border: 1px solid #000000;
 
 #colonne3{
   position: absolute;
-width:60%;
-left:100%;
+width:30%;
+top:20%;
+left:71%;
+height: 100%;
 background: linear-gradient(90deg, rgba(102, 204, 51, 0.369683) 31.96%, rgba(217, 217, 217, 0) 50.38%, rgba(0, 204, 255, 0.63) 86.19%);
 }
 
 
 
-
+.title2{
+  color: white;
+  position: absolute;
+  left:6%;
+}
 
 
 
