--- a/style.css
+++ b/style.css
@@ -768,7 +768,7 @@ font-size: 210%;
   border: none;
   padding:3%;
   height: 5%;
-  width: 99%;
+  width: 93%;
   background: rgba(102, 204, 51, 0.42);
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -780,49 +780,137 @@ font-size: 210%;
   grid-template-columns: repeat(3, 1fr);
   /*gap: 10px; /* Ajoutez un espace entre les colonnes si nécessaire */
 }
+
+/**css du header menu deroulant***/
+.dropdown3{
+  position:absolute;
+  display: inline-block;
+
+}
+
+ .dropdown-toggle {
+  background-color: #f2f2f2;
+  border: none;
+  margin-left:-280%;
+  padding: 50% 170%;
+  cursor: pointer;
+  color: white;
+  font-size: 120%;
+  background-color: rgba(0, 204, 255, 0.42);
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 45px;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown-menu li {
+  padding: 10px;
+}
+
+.dropdown-menu li:hover {
+  background-color: #f9f9f9;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+
+.title3{
+  text-align: center;
+  color:#66CC33;
+  font-size: 200%;
+}
+
+#lien9{
+  position: absolute;
+  left: 0%;
+  top:5%;
+}
+.msg{
+  position: absolute;
+  left:60%;
+  top:20%;
+
+}
+.doc{
+  position: absolute;
+  left: 70%;
+  top:20%;
+}
+
+.profil{
+  position: absolute;
+  width:15%;
+  top:-15%;
+  left:78%;
+}
  .colonne{
   flex:1;
 }
 #colonne1{
 position: absolute;
-width:30%;
+width:25%;
 top:20%;
 display: flex;
   flex-direction: column;
-  min-height: 100vh;
+height: 120%;
 box-sizing: border-box;
 background: rgba(102, 204, 51, 0.13);
-border: 1px solid #000000;
+overflow-y: auto;
+overflow-x: hidden;
+/* border: 1px solid #000000;*/
 }
 
 #colonne2{
   top:20%;
   position: absolute;
-  width:40%;
-  left:30.5%;
+  width:37%;
+  left:25.5%;
   display: flex;
     flex-direction: column;
-    min-height: 100vh;
+  height: 120%;
   box-sizing: border-box;
   background: rgba(0, 204, 255, 0.26);
-  border: 1px solid #000000;
+  overflow-y: auto;
+  overflow-x: hidden;
+  /* border: 1px solid #000000; */
 }
 
 #colonne3{
   position: absolute;
-width:30%;
+width:37%;
 top:20%;
-left:71%;
-height: 100%;
+left:62.5%;
+height: 120%;
 background: linear-gradient(90deg, rgba(102, 204, 51, 0.369683) 31.96%, rgba(217, 217, 217, 0) 50.38%, rgba(0, 204, 255, 0.63) 86.19%);
+overflow-y: auto;
+overflow-x: hidden;
 }
 
+#boutMarcar{
+  padding: 3%;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 45px;
 
+}
 
 .title2{
   color: white;
   position: absolute;
-  left:6%;
+  left:9%;
 }
 
 
@@ -838,6 +926,11 @@ background: linear-gradient(90deg, rgba(102, 204, 51, 0.369683) 31.96%, rgba(217
 
 /**css footer**/
 
+.footerPersonne{
+
+  top:140%;
+  bottom: 0;
+}
 #inscriptionConnexion{
 
   top:330%;
