--- a/style.css
+++ b/style.css
@@ -760,14 +760,17 @@ font-size: 210%;
 /***css gestion_rdv***/
 
 .bodyPersonne{
-  background: none;
+
+  background: linear-gradient(90deg, rgba(102, 204, 51, 0.369683) 31.96%,
+  rgba(217, 217, 217, 0) 50.38%,
+   rgba(0, 204, 255, 0.63) 86.19%);
 }
 
 .headerPersonne{
   position: absolute;
   border: none;
   padding:3%;
-  height: 5%;
+  height: 10%;
   width: 93%;
   background: rgba(102, 204, 51, 0.42);
   border: 1px solid #000000;
@@ -783,12 +786,15 @@ font-size: 210%;
 
 /**css du header menu deroulant***/
 .dropdown3{
-  position:absolute;
+  position:relative;
   display: inline-block;
+  color: white;
 
 }
 
  .dropdown-toggle {
+
+   cursor: pointer;
   background-color: #f2f2f2;
   border: none;
   margin-left:-280%;
@@ -796,6 +802,7 @@ font-size: 210%;
   cursor: pointer;
   color: white;
   font-size: 120%;
+
   background-color: rgba(0, 204, 255, 0.42);
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -804,26 +811,45 @@ font-size: 210%;
 
 .dropdown-menu {
   position: absolute;
-  top: 100%;
-  left: 0;
+  top:80%;
+  left:82%;
+  width:17%;
+
+    background-color: rgba(0, 204, 255, 0.42);
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 45px;
   display: none;
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   list-style-type: none;
   padding: 0;
   margin: 0;
+  color: white;
+
+
 }
 
 .dropdown-menu li {
   padding: 10px;
+  color: white;
+  text-align: center;
+
 }
 
 .dropdown-menu li:hover {
-  background-color: #f9f9f9;
+  background-color: rgba(0, 204, 255, 0.42);
+  color: white;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 45px;
+
 }
 
-.dropdown:hover .dropdown-menu {
+.dropdown3:hover .dropdown-menu {
   display: block;
+background-color: rgba(0, 204, 255, 0.42);
+position: absolute;
 }
 
 
@@ -836,33 +862,35 @@ font-size: 210%;
 #lien9{
   position: absolute;
   left: 0%;
-  top:5%;
+  top:15%;
 }
 .msg{
   position: absolute;
   left:60%;
-  top:20%;
+  top:30%;
 
 }
 .doc{
   position: absolute;
   left: 70%;
-  top:20%;
+  top:30%;
 }
 
 .profil{
   position: absolute;
   width:15%;
-  top:-15%;
+  top:0%;
   left:78%;
 }
  .colonne{
   flex:1;
 }
+
+/**css des colonnes***/
 #colonne1{
 position: absolute;
 width:25%;
-top:20%;
+top:30%;
 display: flex;
   flex-direction: column;
 height: 120%;
@@ -874,7 +902,7 @@ overflow-x: hidden;
 }
 
 #colonne2{
-  top:20%;
+  top:30%;
   position: absolute;
   width:37%;
   left:25.5%;
@@ -891,7 +919,7 @@ overflow-x: hidden;
 #colonne3{
   position: absolute;
 width:37%;
-top:20%;
+top:30%;
 left:62.5%;
 height: 120%;
 background: linear-gradient(90deg, rgba(102, 204, 51, 0.369683) 31.96%, rgba(217, 217, 217, 0) 50.38%, rgba(0, 204, 255, 0.63) 86.19%);
@@ -900,11 +928,19 @@ overflow-x: hidden;
 }
 
 #boutMarcar{
+margin-top:110%;
+margin-left: 40%;
   padding: 3%;
   box-sizing: border-box;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 45px;
 
+}
+
+#boutMarcar:hover{
+  position: absolute;
+  background-color: #daffff;
+  color:#00CCFF;
 }
 
 .title2{
@@ -913,7 +949,11 @@ overflow-x: hidden;
   left:9%;
 }
 
-
+.textelogin2{
+  font-family: 'Happy Monkey';
+font-style: normal;
+color: black;
+}
 
 
 
