--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a {
  #image2{
 position:absolute;
 width:20%;
-height: 46%;
+height: 40%;
 left: 80%;
 top:0%;
 
@@ -96,7 +96,7 @@ top:0%;
   position:absolute;
   color: white;
   font-family: "Happy Monkey", sans-serif;
-  top:25%;
+  top:20%;
   right: 1%;
   left: 85%;
   text-align: center;
@@ -107,7 +107,7 @@ top:0%;
   position: absolute;
   width:15%;
   height: 15%;
-margin-top: -4%;
+margin-top: 0%;
 margin-left: -4%;
 }
 
@@ -171,7 +171,7 @@ opacity: 0.3;
   width: 100%;
   height: 10%;
   left: 0%;
-  top: 60%;
+  top: 50%;
   background: #00CCFF;
   box-shadow:0 0 10px rgba(0, 0, 0, 0.9);
 
@@ -240,7 +240,7 @@ opacity: 0.3;
 #image6{
 position: absolute;
 opacity: 0.5;
-left:60%;
+left:55%;
 top:130%;
    width: 30%;
 }
@@ -254,16 +254,16 @@ left: -30%;
 top: 130%;
 border-radius: 60%;
 background: #66CC33;
+text-align: center;
 
 
-
-padding-left: 5%;
+padding-left: 2%;
 }
 
 #ellipse10{
   position: absolute;
   left: 81.5%;
-  top:-50%;
+  top:-40%;
 }
 
 
@@ -273,7 +273,7 @@ position: absolute;
 width: 70%;
 height: 25%;
 left: 28%;
-top: 200%;
+top: 190%;
 border-radius: 60%;
 background: #00CCFF;
 text-align: center;
@@ -285,7 +285,7 @@ font-size: 150%;
     position: absolute;
     font-family: "Happy Monkey", sans-serif;
     font-size: 200%;
-    left:15%;
+    left:12%;
     top:10%;
     color:white;
     text-align: center;
@@ -304,7 +304,7 @@ font-size: 150%;
 #image22{
   position: absolute;
   top:170%;
-left:-3%;
+left:0%;
 width: 30%;
 }
 
@@ -973,8 +973,19 @@ overflow-x: hidden;
   width: 20px;
 }
 
+#file-input{
+  position: absolute;
+}
+#boutFile{
 
-
+position: absolute;
+padding:3%;
+box-sizing: border-box;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 45px;
+top:35%;
+left: 67%;
+}
 /**css footer**/
 
 .footerPersonne{
